--- a/app/view/user/Login.htm
+++ b/app/view/user/Login.htm
@@ -4,11 +4,11 @@
         <div class="line"></div>
         <div class="form-group">
           <label for="inputNick">用户名</label>
-          <input value="" type="text" id="inputNick" class="form-control" required autofocus>
+          <input value="" type="text" id="inputNick" value="luhan" class="form-control" required autofocus>
         </div>
         <div class="form-group">
           <label for="inputPassword">登录密码</label>
-          <input value="" type="password" id="inputPassword" class="form-control" required>
+          <input value="" type="password" id="inputPassword" value="5tgb7ujm" class="form-control" required>
         </div>
         <div class="form-group">
           <button id="btn-login" class="btn btn-primary btn-block" type="submit">登录</button>
