--- a/app/view/user/Login.htm
+++ b/app/view/user/Login.htm
@@ -8,7 +8,7 @@
         </div>
         <div class="form-group">
           <label for="inputPassword">登录密码</label>
-          <input type="password" id="inputPassword" value="5tgb7ujm" class="form-control" required>
+          <input type="password" id="inputPassword" value="" class="form-control" required>
         </div>
         <div class="form-group">
           <button id="btn-login" class="btn btn-primary btn-block" type="submit">登录</button>
