--- a/app/view/rzrq/Stock.htm
+++ b/app/view/rzrq/Stock.htm
@@ -11,25 +11,60 @@
 </div>
 
 <div class="">
+    <!-- 融资余额 -->
     <div class="col-sm-12 chart-container">
         <div id="chartRzyeLine" class="chart"></div>
     </div>
     <div class="col-sm-12 chart-container">
         <div id="chartRzyeBar" class="chart"></div>
     </div>
-
-    <div class="col-sm-12 chart-container">
-        <div id="chartRzmreLine" class="chart"></div>
-    </div>
-    <div class="col-sm-12 chart-container">
-        <div id="chartRzmreBar" class="chart"></div>
-    </div>
-
+    <!-- 融券余额 -->
     <div class="col-sm-12 chart-container">
         <div id="chartRqyeLine" class="chart"></div>
     </div>
     <div class="col-sm-12 chart-container">
         <div id="chartRqyeBar" class="chart"></div>
     </div>
-
+    <!-- 融资净买额 -->
+    <div class="col-sm-12 chart-container">
+        <div id="chartRzjmeLine" class="chart"></div>
+    </div>
+    <div class="col-sm-12 chart-container">
+        <div id="chartRzjmeBar" class="chart"></div>
+    </div>
+    <!-- 融资买入额 -->
+    <div class="col-sm-12 chart-container">
+        <div id="chartRzmreLine" class="chart"></div>
+    </div>
+    <div class="col-sm-12 chart-container">
+        <div id="chartRzmreBar" class="chart"></div>
+    </div>
+    <!-- 融资偿还额 -->
+    <div class="col-sm-12 chart-container">
+        <div id="chartRzcheLine" class="chart"></div>
+    </div>
+    <div class="col-sm-12 chart-container">
+        <div id="chartRzcheBar" class="chart"></div>
+    </div>
+    <!-- 融券余量 -->
+    <div class="col-sm-12 chart-container">
+        <div id="chartRqylLine" class="chart"></div>
+    </div>
+    <div class="col-sm-12 chart-container">
+        <div id="chartRqylBar" class="chart"></div>
+    </div>
+    <!-- 融券卖出量 -->
+    <div class="col-sm-12 chart-container">
+        <div id="chartRqmclLine" class="chart"></div>
+    </div>
+    <div class="col-sm-12 chart-container">
+        <div id="chartRqmclBar" class="chart"></div>
+    </div>
+    <!-- 融券偿还量 -->
+    <div class="col-sm-12 chart-container">
+        <div id="chartRqchlLine" class="chart"></div>
+    </div>
+    <div class="col-sm-12 chart-container">
+        <div id="chartRqchlBar" class="chart"></div>
+    </div>
 </div>
